k8s-cluster/devops-tools/n8n-service.yml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: devops-tools
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
